--- a/.github/workflows/buid-and-push.yml
+++ b/.github/workflows/buid-and-push.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container 
-          
+
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -61,4 +61,4 @@ jobs:
       - name: Scan image for vulnerabilities
         uses: aquasecurity/trivy-action@0.20.0
         with:
-          image-ref: ${{ steps.meta.outputs.tags }}
+          image-ref: latest
