--- a/.github/workflows/buid-and-push.yml
+++ b/.github/workflows/buid-and-push.yml
@@ -58,13 +58,15 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Debug meta
+      - name: Extract first tag
+        id: first_tag
         run: |
-          echo "TAGS: ${{ steps.meta.outputs.tags }}"
-          echo "JSON: ${{ steps.meta.outputs.json }}"
+          FIRST_TAG=$(echo "${{ steps.meta.outputs.tags }}" | head -n 1)
+          echo "tag=$FIRST_TAG" >> $GITHUB_OUTPUT
 
-
-      - name: Scan image for vulnerabilities
-        uses: aquasecurity/trivy-action@0.20.0
+      - name: Scan image with Trivy
+        uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ steps.meta.outputs.tags }}
+          image-ref: ${{ steps.first_tag.outputs.tag }}
+          format: table
+          exit-code: 1
